# themer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  config.example.yml  install.sh
assets/: config.yml
example-configs/: custom-format
examples/: i3-wallpaper.md  i3.md
src/: block.rs  config.rs  engine.rs  main.rs  updates.rs  utils.rs
test-configs/: basic.yml  config.yml  custom.yml  imports.yml
test-configs/imports/: test-theme
