[package]
name = "themer"
description = "Update theme colors in your config files with single command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_yaml = "0.8.26"
