[package]
name = "themer"
description = "Update theme variables in your config files with single command"
version = "1.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
log = "0.4.17"
simplelog = "0.12.0"
colored = "2.0.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_yaml = "0.8.26"
regex = "1.6.0"
lazy_static = "1.4.0"
